--- a/src/kOS.Safe.Test/kOS.Safe.Test.csproj
+++ b/src/kOS.Safe.Test/kOS.Safe.Test.csproj
@@ -87,4 +87,8 @@
   <ItemGroup>
     <Folder Include="Serialization\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="ProfilingSessions\Session20160127_233127.sdps" />
+    <Content Include="ProfilingSessions\Session20160127_233506.sdps" />
+  </ItemGroup>
 </Project>
