Updated kOS Parts
Updated kOS parts contain new features:
New Cherry Light with animation and color change
New KOS9000 CPU. Lightweight, and light animation and color
Updated .5M CPU with optimized mesh and textures, and coloured light
and coordinated texture color, and cool startup animation

--- a/Resources/GameData/kOS/Parts/kOSMachineRad/part.cfg
+++ b/Resources/GameData/kOS/Parts/kOSMachineRad/part.cfg
@@ -8,7 +8,7 @@ author = Peter Goddard
 // --- asset parameters ---
 mesh = model/model.mu
 scale = 1
-rescaleFactor = 0.99999999999
+rescaleFactor = 1
 iconCenter = 0, 0, 0
 
 // --- node definitions ---
