--- a/Resources/GameData/kOS/Parts/kOSkal9000/part.cfg
+++ b/Resources/GameData/kOS/Parts/kOSkal9000/part.cfg
@@ -1,7 +1,7 @@
 PART
 {
 // --- general parameters ---
-name = kal9000
+name = KAL9000
 module = Part
 author = Peter Goddard and kOS Crew
 
@@ -21,7 +21,7 @@ cost = 1200
 entryCost = 6800
 category = Control
 subcategory = 0
-title = KAL-9000 Scriptable Control System
+title = KAL9000 Scriptable Control System
 manufacturer = Squalid State Devices
 description = Mildly Malevolent artificial entity, use caution on EVA's
 
@@ -49,19 +49,12 @@ MODULE
 	lightR = 0.5
 	lightG = 0
 	lightB = 0
-	//resourceAmount = .002
-	//useResources = true
 }
 
 MODULE
 {
 	name = kOSLightModule
 	resourceAmount = 0.02
-}
-RESOURCE
-{
-	name = ElectricCharge
-	amount = 25
-	maxAmount = 25
+  animationName = KAL9000Lives
 }
 }
