--- a/Resources/GameData/kOS/Parts/kOSMachine0m/part.cfg
+++ b/Resources/GameData/kOS/Parts/kOSMachine0m/part.cfg
@@ -1,7 +1,7 @@
 PART
 {
 // --- general parameters ---
-name = kOSMachine0m
+name = KR-2042
 module = Part
 author = SMA and Peter Goddard
 
@@ -57,14 +57,16 @@ MODULE
 {
 	name = ModuleLight
 	lightName = PowerLight
-	useAnimationDim = true
-	lightBrightenSpeed = 8
-	lightDimSpeed = 4
-	resourceAmount = 0.01
-	animationName = PowerLight
-	useResources = true
-	startEventGUIName = "Power Off"
-	endEventGUIName = "Power On"
+	lightR = 0
+	lightG = 0.1
+	lightB = 0
+}
+
+MODULE
+{
+	name = kOSLightModule
+	resourceAmount = 0.02
+	animationName = flickerStart
 }
 
 
