--- a/Resources/GameData/kOS/Parts/KOSCherryLight/part.cfg
+++ b/Resources/GameData/kOS/Parts/KOSCherryLight/part.cfg
@@ -12,7 +12,7 @@ PART
     TechRequired = advElectrics
     cost = 500
     entryCost = 1200
-    category = Control
+    category = Utility
     subcategory = 0
     title = Cherry Light
     manufacturer = kOS Peripherals
@@ -21,8 +21,8 @@ PART
     mass = 0.001
     dragModelType = default
     maximum_drag = .002
-    minimum_drag = 0
-    angularDrag = 0
+    minimum_drag = .002
+    angularDrag = 2
     crashTolerance = 9
     maxTemp = 2400
     MODULE
