--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ notifications:
 # Before the install the library dlls need to be downloaded
 before_install:
 - cd Resources
-- wget --quiet --user=$KOS_LIB_USER --password=$KOS_LIB_PASSWORD $KOS_LIB_URL -O kos.tar
-- tar -xvf kos.tar
+- openssl aes-256-cbc -K $encrypted_6287ee711a27_key -iv $encrypted_6287ee711a27_iv -in kos-1.0.5.tar.enc -out kos-1.0.5.tar -d
+- tar -xvf kos-1.0.5.tar
 - cd ../
 
 # Cleanup the downloaded resources
