--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ notifications:
 # Before the install the library dlls need to be downloaded
 before_install:
 - openssl aes-256-cbc -K $encrypted_6287ee711a27_key -iv $encrypted_6287ee711a27_iv -in kos-1.0.5.tar.enc -out kos-1.0.5.tar -d
-- mkdir Resources
+- mkdir -p Resources
 - tar -xvf kos-1.0.5.tar -C Resources/
 
 # Cleanup the downloaded resources
