--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,11 @@ before_install:
 - tar -xvf kos-1.0.5.tar -C Resources/
 
 install:
-- nuget restore solution-name.sln
+- nuget restore src/kOS.sln
 - nuget install NUnit.Runners -Version 3.0.1 -OutputDirectory testrunner
 
 script:
-- xbuild /p:Configuration=Release solution-name.sln
+- xbuild /p:Configuration=Release src/kOS.sln
 - mono ./testrunner/NUnit.Runners.3.0.1/tools/nunit-console.exe src/kOS.Safe.Test/bin/Release/kOS.Safe.Test.dll
 
 # Cleanup the downloaded resources
