Let's try compiling docs too
.travis.yml
* install python-sphinx apt package
travis-after.sh
* script now tries to compile the docs too

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: csharp
 solution: src/kOS.sln
 sudo: false
 
+addons:
+  apt:
+    packages:
+    - python-sphinx
+
 # Pre-shared token for pushing notifications to slack chat
 notifications:
   slack: ksp-kos:51DTQ4ZBP9SlGNnLWJ5D84vp
