--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ notifications:
   slack: ksp-kos:51DTQ4ZBP9SlGNnLWJ5D84vp
 
 # Before the install the library dlls need to be downloaded
-before_install:
+before_script:
 - chmod +x travis-before.sh && ./travis-before.sh
 
 # Cleanup the downloaded resources
