--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ notifications:
 
 # Before the install the library dlls need to be downloaded
 before_script:
-- chmod +x travis-before.sh && ./travis-before.sh
+- chmod +x .ci/travis/before_script.sh && ./.ci/travis/before_script.sh
 
 script:
 - xbuild /p:Configuration=Release $TRAVIS_SOLUTION
@@ -24,7 +24,7 @@ script:
 
 # Cleanup the downloaded resources
 after_script:
-- chmod +x travis-after.sh && ./travis-after.sh
+- chmod +x .ci/travis/after_script.sh && ./.ci/travis/after_script.sh
 
 before_deploy:
 - mkdir src/kOS/bin/dist 
