A couple of fixes
.gitattributes
* Comment and fix opening line "Auto detect..."
* Add .csproj and .sln definitions from my own repositories

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,8 @@
-uto detect text files and perform LF normalization
+# Auto detect text files and perform LF normalization
 # http://davidlaing.com/2012/09/19/customise-your-gitattributes-to-become-a-git-ninja/
 * text=auto
 
 *.cs     diff=csharp
+
+*.csproj text=auto merge=union
+*.sln text=auto eol=crlf merge=union
