Re-enable unit tests
Un-comment unit test line.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_script:
 script:
 - xbuild /p:Configuration=Release $TRAVIS_SOLUTION
 # I know framework 4.0 is wrong, just trying it to see if it fixes the test
-# - nunit-console -framework=4.0 src/kOS.Safe.Test/bin/Release/kOS.Safe.Test.dll
+- nunit-console -framework=4.0 src/kOS.Safe.Test/bin/Release/kOS.Safe.Test.dll
 # - chmod +x .ci/travis/script-sphinxdocs.sh && ./.ci/travis/script-sphinxdocs.sh
 
 # Cleanup the downloaded resources
