--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ addons:
     - python-sphinx
     - nunit-console
 
+env:
+- KSP_VERSION = 1.0.5
+
 # Pre-shared token for pushing notifications to slack chat
 notifications:
   slack: ksp-kos:51DTQ4ZBP9SlGNnLWJ5D84vp
