--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,9 @@ packages/
 /*.user
 
 # Build products and files generated during gameplay
-Resources/GameData/kOS/Plugins/
+[Rr]esources/GameData/kOS/Plugins/
+[Rr]esources/*.dll
+[Rr]esources/GameData/*.dll
 !Resources/GameData/kOS/ICSharpCode.SharpZipLib.dll
 
 # Symlink to KSP directory
@@ -25,3 +27,10 @@ KSPdirlink
 # OS Specific
 .DS_STORE*
 [Tt]humbs.db
+
+#netkan for generating ckan test files
+netkan.exe
+*.ckan
+
+#zip files for archived art assets
+*.zip
