Begin Function Migration
Begin migrating "safe" functions into kOS.Safe

--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -174,7 +174,19 @@
     <Compile Include="Execution\SurboutineContext.cs" />
     <Compile Include="Execution\Variable.cs" />
     <Compile Include="Execution\VariableScope.cs" />
+    <Compile Include="Function\Collections\FunctionList.cs" />
+    <Compile Include="Function\Collections\FunctionQueue.cs" />
+    <Compile Include="Function\Collections\FunctionRange.cs" />
+    <Compile Include="Function\Collections\FunctionStack.cs" />
     <Compile Include="Function\FunctionAttribute.cs" />
+    <Compile Include="Function\Collections\FunctionLexicon.cs" />
+    <Compile Include="Function\Misc\FunctionLoad.cs" />
+    <Compile Include="Function\Misc\FunctionLogFile.cs" />
+    <Compile Include="Function\Misc\FunctionPrint.cs" />
+    <Compile Include="Function\Misc\FunctionRun.cs" />
+    <Compile Include="Function\Misc\FunctionShutdown.cs" />
+    <Compile Include="Function\Misc\ProfileResult.cs" />
+    <Compile Include="Function\Persistence\FunctionCreate.cs" />
     <Compile Include="Function\SafeFunctionBase.cs" />
     <Compile Include="Function\FunctionManager.cs" />
     <Compile Include="Function\IFunctionManager.cs" />
