--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -180,16 +180,46 @@
     <Compile Include="Function\Collections\FunctionStack.cs" />
     <Compile Include="Function\FunctionAttribute.cs" />
     <Compile Include="Function\Collections\FunctionLexicon.cs" />
+    <Compile Include="Function\KOSMath\FunctionAbs.cs" />
+    <Compile Include="Function\KOSMath\FunctionCeiling.cs" />
+    <Compile Include="Function\KOSMath\FunctionChar.cs" />
+    <Compile Include="Function\KOSMath\FunctionFloor.cs" />
+    <Compile Include="Function\KOSMath\FunctionLn.cs" />
+    <Compile Include="Function\KOSMath\FunctionLog10.cs" />
+    <Compile Include="Function\KOSMath\FunctionMax.cs" />
+    <Compile Include="Function\KOSMath\FunctionMin.cs" />
+    <Compile Include="Function\KOSMath\FunctionMod.cs" />
+    <Compile Include="Function\KOSMath\FunctionRandom.cs" />
+    <Compile Include="Function\KOSMath\FunctionRound.cs" />
+    <Compile Include="Function\KOSMath\FunctionSqrt.cs" />
+    <Compile Include="Function\KOSMath\FunctionUnchar.cs" />
+    <Compile Include="Function\Misc\DebugDump.cs" />
     <Compile Include="Function\Misc\FunctionLoad.cs" />
     <Compile Include="Function\Misc\FunctionLogFile.cs" />
     <Compile Include="Function\Misc\FunctionPrint.cs" />
+    <Compile Include="Function\Misc\FunctionReboot.cs" />
     <Compile Include="Function\Misc\FunctionRun.cs" />
     <Compile Include="Function\Misc\FunctionShutdown.cs" />
+    <Compile Include="Function\Misc\MakeBuiltinDelegate.cs" />
     <Compile Include="Function\Misc\ProfileResult.cs" />
+    <Compile Include="Function\Trigonometry\FunctionAngleDiff.cs" />
+    <Compile Include="Function\Trigonometry\FunctionArcTan.cs" />
+    <Compile Include="Function\Trigonometry\FunctionArcTan2.cs" />
     <Compile Include="Function\Persistence\FunctionCreate.cs" />
+    <Compile Include="Function\Persistence\FunctionDelete.cs" />
+    <Compile Include="Function\Persistence\FunctionExists.cs" />
+    <Compile Include="Function\Persistence\FunctionOpen.cs" />
+    <Compile Include="Function\Persistence\FunctionRename.cs" />
+    <Compile Include="Function\Persistence\FunctionSwitch.cs" />
     <Compile Include="Function\SafeFunctionBase.cs" />
     <Compile Include="Function\FunctionManager.cs" />
     <Compile Include="Function\IFunctionManager.cs" />
+    <Compile Include="Function\Suffixed\PIDLoopConstructor.cs" />
+    <Compile Include="Function\Trigonometry\FunctionArcCos.cs" />
+    <Compile Include="Function\Trigonometry\FunctionArcSin.cs" />
+    <Compile Include="Function\Trigonometry\FunctionCos.cs" />
+    <Compile Include="Function\Trigonometry\FunctionSin.cs" />
+    <Compile Include="Function\Trigonometry\FunctionTan.cs" />
     <Compile Include="ILogger.cs" />
     <Compile Include="IUpdateObserver.cs" />
     <Compile Include="Module\IProcessor.cs" />
