Added Trajectories addon
Uses reflection to access Trajectories. Works with Trajectories 1.4.6.
Future Trajectories releases may break it, in which case
addons:tr:available will return false.

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -69,6 +69,8 @@
     <Compile Include="AddOns\RemoteTech\RemoteTechUtility.cs" />
     <Compile Include="AddOns\RemoteTech\RemoteTechInterpreter.cs" />
     <Compile Include="AddOns\RemoteTech\RemoteTechVolumeManager.cs" />
+    <Compile Include="AddOns\Trajectories\Addon.cs" />
+    <Compile Include="AddOns\Trajectories\TRWrapper.cs" />
     <Compile Include="Binding\ActionGroups.cs" />
     <Compile Include="Binding\Binding.cs" />
     <Compile Include="Binding\BindingConfig.cs" />
