Move SteeringManager Moved SteeringManager.cs from kOS/Binding to kOS/Control

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -79,7 +79,7 @@
     <Compile Include="Binding\FlightStats.cs" />
     <Compile Include="Binding\MissionSettings.cs" />
     <Compile Include="Binding\RoverStats.cs" />
-    <Compile Include="Binding\SteeringManager.cs" />
+    <Compile Include="Control\SteeringManager.cs" />
     <Compile Include="Binding\TerminalSettings.cs" />
     <Compile Include="Binding\BindingsUniverse.cs" />
     <Compile Include="AddOns\RemoteTech\RemoteTechFactory.cs" />
