Create new AddonManager and kOSAddonAttribute
Convert existing Addons to the new attribute system

AddonManager.cs
* New manager class for all addons.
* Receives the register calls of AssemblyWalkAttribute
* Contains a static list of all kOSAddonAttributes and associated types
* Instantiated by the processor as a member of kOS.SharedObjects

kOSAddonAttribute.cs
* New attribute class for decorating kOS Addon classes.
* Important to remember that the class must inherit from kOS.Suffixed.Addon as well (defined by AddonManager)

kOS.csproj
* Add references to new classes.

AddonList.cs
* Rework AddonList to create suffixes based on Addons in AddonManager
* Add new suffixes for HASADDON and AVAILABLE to allow scripts to check if the addon is installed and if it is available

kOSProcessor.cs, SharedObjects.cs
* Add references to the new AddonManager

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -59,6 +59,8 @@
   <ItemGroup>
     <Compile Include="AddOns\ActionGroupsExtended\ActionGroupsExtendedAPI.cs" />
     <Compile Include="AddOns\ActionGroupsExtended\ActionGroupsExtendedBinding.cs" />
+    <Compile Include="AddOns\kOSAddonAttribute.cs" />
+    <Compile Include="AddOns\AddonManager.cs" />
     <Compile Include="AddOns\InfernalRobotics\IRControlGroup.cs" />
     <Compile Include="AddOns\InfernalRobotics\IRHandler.cs" />
     <Compile Include="AddOns\InfernalRobotics\IRServoWrapper.cs" />
